gcc/cp/decl.h
@@ -34,3 +34,16 @@ enum decl_context
 extern tree grokdeclarator (const cp_declarator *,
 			    const cp_decl_specifier_seq *,
 			    enum decl_context, int, tree*);
+
+/* States indicating how grokdeclarator() should handle declspecs marked
+   with __attribute__((deprecated)).  An object declared as
+   __attribute__((deprecated)) suppresses warnings of uses of other
+   deprecated items.  */
+
+enum deprecated_states {
+  DEPRECATED_NORMAL,
+  DEPRECATED_SUPPRESS
+};
+
+extern enum deprecated_states deprecated_state;
+
