gcc/testsuite/g++.dg/cpp0x/auto2.C
@@ -69,4 +69,6 @@ int main()
     case 42:
       break;
     }
+
+  auto j = 42, k = 24;
 }
